WIP: add support for UMA
Change-Id: Ibd2c62b069d303cc9f7fa0f1db454a4abf1c6ad7

--- a/src/dawn/platform/BUILD.gn
+++ b/src/dawn/platform/BUILD.gn
@@ -27,6 +27,9 @@ dawn_component("platform") {
     "DawnPlatform.cpp",
     "WorkerThread.cpp",
     "WorkerThread.h",
+    "metrics/Histogram.cpp",
+    "metrics/Histogram.h",
+    "metrics/histogram_macros.h",
     "tracing/EventTracer.cpp",
     "tracing/EventTracer.h",
     "tracing/TraceEvent.h",
