Add support for UMA
Adds histogram_macros.h, inspired by the same header in ANGLE (and
Chromium). Similar to event tracing, is enabled only when
Platform::MonotonicallyIncreasingTime returns non-zero values; thus
disabled in Dawn standalone builds, but enabled in Chrome.

Bug: dawn:1087
Change-Id: Ibd2c62b069d303cc9f7fa0f1db454a4abf1c6ad7

--- a/src/dawn/platform/CMakeLists.txt
+++ b/src/dawn/platform/CMakeLists.txt
@@ -26,6 +26,9 @@ target_sources(dawn_platform PRIVATE
     "DawnPlatform.cpp"
     "WorkerThread.cpp"
     "WorkerThread.h"
+    "metrics/Histogram.cpp"
+    "metrics/Histogram.h"
+    "metrics/histogram_macros.h"
     "tracing/EventTracer.cpp"
     "tracing/EventTracer.h"
     "tracing/TraceEvent.h"
