[tint][ir] Add ir::Let for giving values a name & position.
This gives 'let's initialized with a constant value or another let, an instruction.
Without an instruction there's no way to know where the original 'let' constant was declared, nor the authored name of the let.

By inlining the constant value, there's no good way to reconstruct the original semantics when using ToProgram(), and expressions that were originally evaluated as runtime-expressions can become constant-expressions when roundtripping via the IR.
This can cause WGSL validation errors.
See the new IRToProgramRoundtripTest.FunctionScopeLet_NoConstEvalError test for an example of this.

The loss of 'let' name also impacts debug information.

Change-Id: I61d6cf830d8006bf0fb62875a50154c281d8a840

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -1305,6 +1305,8 @@ if (tint_build_ir) {
       "ir/instruction.h",
       "ir/instruction_result.cc",
       "ir/instruction_result.h",
+      "ir/let.cc",
+      "ir/let.h",
       "ir/load.cc",
       "ir/load.h",
       "ir/location.h",
@@ -2052,6 +2054,7 @@ if (tint_build_unittests) {
         "writer/spirv/ir/generator_impl_ir_convert_test.cc",
         "writer/spirv/ir/generator_impl_ir_function_test.cc",
         "writer/spirv/ir/generator_impl_ir_if_test.cc",
+        "writer/spirv/ir/generator_impl_ir_let_test.cc",
         "writer/spirv/ir/generator_impl_ir_loop_test.cc",
         "writer/spirv/ir/generator_impl_ir_switch_test.cc",
         "writer/spirv/ir/generator_impl_ir_swizzle_test.cc",
@@ -2387,6 +2390,7 @@ if (tint_build_unittests) {
         "ir/from_program_builtin_test.cc",
         "ir/from_program_call_test.cc",
         "ir/from_program_function_test.cc",
+        "ir/from_program_let_test.cc",
         "ir/from_program_literal_test.cc",
         "ir/from_program_materialize_test.cc",
         "ir/from_program_store_test.cc",
@@ -2399,6 +2403,7 @@ if (tint_build_unittests) {
         "ir/instruction_result_test.cc",
         "ir/instruction_test.cc",
         "ir/ir_test_helper.h",
+        "ir/let_test.cc",
         "ir/load_test.cc",
         "ir/loop_test.cc",
         "ir/module_test.cc",
