--- a/src/tint/CMakeLists.txt
+++ b/src/tint/CMakeLists.txt
@@ -791,6 +791,8 @@ if(${TINT_BUILD_IR})
     ir/instruction.h
     ir/instruction_result.cc
     ir/instruction_result.h
+    ir/let.cc
+    ir/let.h
     ir/load.cc
     ir/load.h
     ir/location.h
@@ -1322,6 +1324,7 @@ if(TINT_BUILD_TESTS)
         writer/spirv/ir/generator_impl_ir_convert_test.cc
         writer/spirv/ir/generator_impl_ir_function_test.cc
         writer/spirv/ir/generator_impl_ir_if_test.cc
+        writer/spirv/ir/generator_impl_ir_let_test.cc
         writer/spirv/ir/generator_impl_ir_loop_test.cc
         writer/spirv/ir/generator_impl_ir_switch_test.cc
         writer/spirv/ir/generator_impl_ir_swizzle_test.cc
@@ -1571,6 +1574,7 @@ if(TINT_BUILD_TESTS)
       ir/from_program_builtin_test.cc
       ir/from_program_call_test.cc
       ir/from_program_function_test.cc
+      ir/from_program_let_test.cc
       ir/from_program_literal_test.cc
       ir/from_program_materialize_test.cc
       ir/from_program_store_test.cc
@@ -1583,6 +1587,7 @@ if(TINT_BUILD_TESTS)
       ir/instruction_result_test.cc
       ir/instruction_test.cc
       ir/ir_test_helper.h
+      ir/let_test.cc
       ir/load_test.cc
       ir/loop_test.cc
       ir/module_test.cc
