--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -1305,6 +1305,8 @@ if (tint_build_ir) {
       "ir/instruction.h",
       "ir/instruction_result.cc",
       "ir/instruction_result.h",
+      "ir/let.cc",
+      "ir/let.h",
       "ir/load.cc",
       "ir/load.h",
       "ir/location.h",
@@ -2387,6 +2389,7 @@ if (tint_build_unittests) {
         "ir/from_program_builtin_test.cc",
         "ir/from_program_call_test.cc",
         "ir/from_program_function_test.cc",
+        "ir/from_program_let_test.cc",
         "ir/from_program_literal_test.cc",
         "ir/from_program_materialize_test.cc",
         "ir/from_program_store_test.cc",
@@ -2399,6 +2402,7 @@ if (tint_build_unittests) {
         "ir/instruction_result_test.cc",
         "ir/instruction_test.cc",
         "ir/ir_test_helper.h",
+        "ir/let_test.cc",
         "ir/load_test.cc",
         "ir/loop_test.cc",
         "ir/module_test.cc",
