--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -2387,6 +2387,7 @@ if (tint_build_unittests) {
         "ir/from_program_builtin_test.cc",
         "ir/from_program_call_test.cc",
         "ir/from_program_function_test.cc",
+        "ir/from_program_let_test.cc",
         "ir/from_program_literal_test.cc",
         "ir/from_program_materialize_test.cc",
         "ir/from_program_store_test.cc",
