[ir][spirv-writer] Implement unary instructions
Complement maps to OpNot, and Negation maps to Op{S,F}Negate.

Bug: tint:1906
Change-Id: I04f6a7f08cc0cb3137ed254e406acf943dbcca27

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -2053,6 +2053,7 @@ if (tint_build_unittests) {
         "writer/spirv/ir/generator_impl_ir_swizzle_test.cc",
         "writer/spirv/ir/generator_impl_ir_test.cc",
         "writer/spirv/ir/generator_impl_ir_type_test.cc",
+        "writer/spirv/ir/generator_impl_ir_unary_test.cc",
         "writer/spirv/ir/generator_impl_ir_var_test.cc",
         "writer/spirv/ir/test_helper_ir.h",
       ]
