--- a/src/tint/CMakeLists.txt
+++ b/src/tint/CMakeLists.txt
@@ -1324,6 +1324,7 @@ if(TINT_BUILD_TESTS)
         writer/spirv/ir/generator_impl_ir_swizzle_test.cc
         writer/spirv/ir/generator_impl_ir_test.cc
         writer/spirv/ir/generator_impl_ir_type_test.cc
+        writer/spirv/ir/generator_impl_ir_unary_test.cc
         writer/spirv/ir/generator_impl_ir_var_test.cc
         writer/spirv/ir/test_helper_ir.h
       )
