--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -1309,6 +1309,8 @@ if (tint_build_ir) {
       "ir/instruction_result.h",
       "ir/load.cc",
       "ir/load.h",
+      "ir/load_vector_element.cc",
+      "ir/load_vector_element.h",
       "ir/location.h",
       "ir/loop.cc",
       "ir/loop.h",
@@ -1324,6 +1326,8 @@ if (tint_build_ir) {
       "ir/return.h",
       "ir/store.cc",
       "ir/store.h",
+      "ir/store_vector_element.cc",
+      "ir/store_vector_element.h",
       "ir/switch.cc",
       "ir/switch.h",
       "ir/swizzle.cc",
@@ -2403,6 +2407,7 @@ if (tint_build_unittests) {
         "ir/instruction_test.cc",
         "ir/ir_test_helper.h",
         "ir/load_test.cc",
+        "ir/load_vector_element_test.cc",
         "ir/loop_test.cc",
         "ir/module_test.cc",
         "ir/multi_in_block_test.cc",
@@ -2411,6 +2416,7 @@ if (tint_build_unittests) {
         "ir/program_test_helper.h",
         "ir/return_test.cc",
         "ir/store_test.cc",
+        "ir/store_vector_element_test.cc",
         "ir/switch_test.cc",
         "ir/swizzle_test.cc",
         "ir/to_program_inlining_test.cc",
