[ir][spirv-writer] Emit bitcast instructions
Straightforward mapping to OpBitcast, with passthrough when source and
destination types match.

Bug: tint:1906
Change-Id: I4152e44567f804790f284d82a84eb83df4adee2d

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -2042,6 +2042,7 @@ if (tint_build_unittests) {
       sources += [
         "writer/spirv/ir/generator_impl_ir_access_test.cc",
         "writer/spirv/ir/generator_impl_ir_binary_test.cc",
+        "writer/spirv/ir/generator_impl_ir_bitcast_test.cc",
         "writer/spirv/ir/generator_impl_ir_builtin_test.cc",
         "writer/spirv/ir/generator_impl_ir_constant_test.cc",
         "writer/spirv/ir/generator_impl_ir_construct_test.cc",
