[ios] Build fixes
The fixes in https://dawn-review.googlesource.com/c/dawn/+/139940
were incomplete. This change also switches some usage of EXPECT_DEATH
to EXPECT_DEATH_IF_SUPPORTED and reverts an incorrect change to
framework dependencies. Also, the vulkan related changes in the
previous CL were incorrect -- the gn config related to vulkan just
needed to be generalized.

Change-Id: Ia8c3ec929576d677f75f764455be880943d2b2c7

--- a/scripts/dawn_features.gni
+++ b/scripts/dawn_features.gni
@@ -80,9 +80,8 @@ declare_args() {
 
   # Enables the compilation of Dawn's Vulkan backend
   # Disables vulkan when compiling for UWP, since UWP only supports d3d
-  dawn_enable_vulkan =
-      (is_linux || is_chromeos || (is_win && !dawn_is_winuwp) || is_fuchsia ||
-       is_android || dawn_use_swiftshader) && !is_ios
+  dawn_enable_vulkan = is_linux || is_chromeos || (is_win && !dawn_is_winuwp) ||
+                       is_fuchsia || is_android || dawn_use_swiftshader
 
   # Enables error injection for faking failures to native API calls
   dawn_enable_error_injection =
