--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -66,14 +66,14 @@ config("internal") {
 }
 
 config("weak_framework") {
-  if (is_mac && dawn_enable_metal) {
+  if (is_apple && dawn_enable_metal) {
     weak_frameworks = [ "Metal.framework" ]
   }
 }
 
 # Config that adds the @executable_path rpath if needed so that Swiftshader or the Vulkan loader are found.
 config("vulkan_rpath") {
-  if (is_mac && dawn_enable_vulkan &&
+  if (is_apple && dawn_enable_vulkan &&
       (use_swiftshader || enable_vulkan_loader)) {
     ldflags = [
       "-rpath",
