--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -436,6 +436,8 @@ libtint_source_set("libtint_ast_transform_src") {
     "ast/transform/expand_compound_assignment.h",
     "ast/transform/first_index_offset.cc",
     "ast/transform/first_index_offset.h",
+    "ast/transform/fold_trivial_lets.cc",
+    "ast/transform/fold_trivial_lets.h",
     "ast/transform/for_loop_to_loop.cc",
     "ast/transform/for_loop_to_loop.h",
     "ast/transform/localize_struct_array_assignment.cc",
