node: move Split into its own file
Fixes a TODO

Change-Id: I900bdb3b2997033abf77b270fa97ea80d341efd1

--- a/src/dawn/node/binding/CMakeLists.txt
+++ b/src/dawn/node/binding/CMakeLists.txt
@@ -69,6 +69,8 @@ add_library(dawn_node_binding STATIC
     "GPUTexture.h"
     "GPUTextureView.cpp"
     "GPUTextureView.h"
+    "Split.cpp"
+    "Split.h"
 )
 common_compile_options(dawn_node_binding)
 
