node: Refactor toggles loading into its own file
Change-Id: I6fd05a7af9e81a263d2da974182fed7f64380e27

--- a/src/dawn/node/binding/CMakeLists.txt
+++ b/src/dawn/node/binding/CMakeLists.txt
@@ -71,6 +71,8 @@ add_library(dawn_node_binding STATIC
     "GPUTextureView.h"
     "Split.cpp"
     "Split.h"
+    "TogglesLoader.cpp"
+    "TogglesLoader.h"
 )
 common_compile_options(dawn_node_binding)
 
