Add GN arg dawn_use_built_dxc
Now, DXC is always checked out, and dawn_use_built_Dxc controls whether
or not DXC is compiled and used in the D3D12 backend.

Adding a GN arg allows us to configure using DXC only in Dawn builders
and not all of Chromium bots, until the DXC path is well tested and
stable.

Bug: chromium:1462339
Change-Id: Iaeb58df3e84e086c8a2ab73025d7505a90869c5c

--- a/scripts/dawn_features.gni
+++ b/scripts/dawn_features.gni
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 import("//build_overrides/build.gni")
+import("dawn_overrides_with_defaults.gni")
 
 if (build_with_chromium) {
   import("//build/config/ozone.gni")
@@ -44,6 +45,13 @@ declare_args() {
   # to be set to take effect.
   # TODO(dawn:1536): Enable SwiftShader for Android.
   dawn_use_swiftshader = !is_android && !is_ios
+
+  # Whether we allow building DXC.
+  # Only use DXC in standalone builds until it is stable. It will be
+  # explicitly enabled in Chromium builds.
+  # DXC requires SM6.0+ which is blocklisted on x86.
+  # See crbug.com/tint/1753.
+  dawn_use_built_dxc = dawn_standalone && is_win && target_cpu != "x86"
 }
 
 declare_args() {
