--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -480,9 +480,9 @@ source_set("sources") {
   }
 
   if (dawn_enable_d3d12) {
-    if (is_win && dawn_build_dxc) {
+    if (dawn_use_built_dxc) {
       deps += [ "$dawn_root/third_party/gn/dxc:dxcompiler" ]
-      defines += [ "DAWN_BUILD_DXC" ]
+      defines += [ "DAWN_USE_BUILT_DXC" ]
       data_deps += [ "$dawn_root/third_party/gn/dxc:copy_dxil_dll" ]
     }
     libs += [ "dxguid.lib" ]
