--- a/scripts/dawn_features.gni
+++ b/scripts/dawn_features.gni
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 import("//build_overrides/build.gni")
+import("dawn_overrides_with_defaults.gni")
 
 if (build_with_chromium) {
   import("//build/config/ozone.gni")
@@ -44,6 +45,13 @@ declare_args() {
   # to be set to take effect.
   # TODO(dawn:1536): Enable SwiftShader for Android.
   dawn_use_swiftshader = !is_android && !is_ios
+
+  # DXC requires SM6.0+ which is blocklisted on x68.
+  # See crbug.com/tint/1753.
+  # Only use DXC in standalone builds until it is stable. It will be
+  # explicitly enabled in Chromium builds.
+  dawn_use_dxc =
+      dawn_standalone && dawn_build_dxc && is_win && target_cpu != "x86"
 }
 
 declare_args() {
