--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -478,6 +478,8 @@ libtint_source_set("libtint_ast_transform_src") {
     "lang/wgsl/ast/transform/substitute_override.h",
     "lang/wgsl/ast/transform/texture_1d_to_2d.cc",
     "lang/wgsl/ast/transform/texture_1d_to_2d.h",
+    "lang/wgsl/ast/transform/texture_builtins_from_uniform.cc",
+    "lang/wgsl/ast/transform/texture_builtins_from_uniform.h",
     "lang/wgsl/ast/transform/truncate_interstage_variables.cc",
     "lang/wgsl/ast/transform/truncate_interstage_variables.h",
     "lang/wgsl/ast/transform/unshadow.cc",
@@ -1024,6 +1026,8 @@ libtint_source_set("libtint_writer_src") {
     "writer/external_texture_options.h",
     "writer/text.cc",
     "writer/text.h",
+    "writer/texture_builtins_from_uniform_options.cc",
+    "writer/texture_builtins_from_uniform_options.h",
     "writer/writer.cc",
     "writer/writer.h",
   ]
@@ -1869,6 +1873,7 @@ if (tint_build_unittests) {
       "lang/wgsl/ast/transform/substitute_override_test.cc",
       "lang/wgsl/ast/transform/test_helper.h",
       "lang/wgsl/ast/transform/texture_1d_to_2d_test.cc",
+      "lang/wgsl/ast/transform/texture_builtins_from_uniform_tests.cc",
       "lang/wgsl/ast/transform/transform_test.cc",
       "lang/wgsl/ast/transform/truncate_interstage_variables_test.cc",
       "lang/wgsl/ast/transform/unshadow_test.cc",
