[ir][tint] Add a bunch of tests for shadowing
Minor tweaks to fix some cases, but there's a bunch of additional work needed to properly support shadowing of builtin types and functions.

Change-Id: I65405eec914f5e28e98805db7794495faf340e2f

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -2430,6 +2430,7 @@ if (tint_build_unittests) {
         "ir/from_program_let_test.cc",
         "ir/from_program_literal_test.cc",
         "ir/from_program_materialize_test.cc",
+        "ir/from_program_shadowing_test.cc",
         "ir/from_program_store_test.cc",
         "ir/from_program_test.cc",
         "ir/from_program_unary_test.cc",
