--- a/src/tint/CMakeLists.txt
+++ b/src/tint/CMakeLists.txt
@@ -1650,6 +1650,12 @@ if(TINT_BUILD_TESTS)
     )
   endif()
 
+  if (${TINT_BUILD_IR} AND ${TINT_BUILD_WGSL_READER})
+    list(APPEND TINT_TEST_SRCS
+      ir/from_program_shadowing_test.cc
+    )
+  endif()
+
   if (${TINT_BUILD_IR} AND ${TINT_BUILD_WGSL_WRITER})
     list(APPEND TINT_TEST_SRCS
       ir/to_program_inlining_test.cc
