[tint][ir][ToProgram] Handle shadowing.
Change the ir::Module naming methods to allow for duplicate names.

Change the ir::Disassembler to ensure that IDs are uniquely named.
If the disassembler has an ID that does not match the value's
name, then a new comment is appended to the end of the instruction
with the value's ID and name.

Add a new RenameConflictsWGSL transform that renames declarations
which prevent identifiers from resolving to the correct
declaration, and those with identical identifiers declared in the
same scope.

This fixes all the known issues with shadowing which the
roundtrip fuzzer uncovered.

Change-Id: Ib3c3df8093863a9917c201ca6ee8c958a4ada6dc

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -521,6 +521,8 @@ if (tint_build_ir) {
       "ir/transform/block_decorated_structs.h",
       "ir/transform/demote_to_helper.cc",
       "ir/transform/demote_to_helper.h",
+      "ir/transform/rename_conflicts_wgsl.cc",
+      "ir/transform/rename_conflicts_wgsl.h",
       "ir/transform/shader_io.cc",
       "ir/transform/shader_io.h",
     ]
@@ -1918,6 +1920,10 @@ if (tint_build_unittests) {
           "ir/transform/shader_io_spirv_test.cc",
           "ir/transform/var_for_dynamic_index_test.cc",
         ]
+      }
+
+      if (tint_build_wgsl_writer) {
+        sources += [ "ir/transform/rename_conflicts_test.cc" ]
       }
     }
   }
