Update VulkanImageWrappingTests To Test Vulkan External Resource Service
VulkanImageWrappingTests is used to test Vulkan External Resource.
It aligns with old External Resoruce handling method in compile time.

The new Vulkan External Resource Service handling external resource in
runtime. So this CL modified VulkanImageWrappingTests to test Vulkan
External Resource Service could handle multiple external image type
resource in runtime.

Bug:dawn:1593
Change-Id: Ie183d28e1ae5f0a27b2c37fe19a0df2dc74f9ddf

--- a/src/dawn/tests/BUILD.gn
+++ b/src/dawn/tests/BUILD.gn
@@ -653,17 +653,14 @@ source_set("white_box_tests_sources") {
   if (dawn_enable_vulkan) {
     deps += [ "${dawn_vulkan_headers_dir}:vulkan_headers" ]
 
-    if (is_chromeos) {
+    if (is_chromeos || is_linux) {
       sources += [
         "white_box/VulkanImageWrappingTests.cpp",
         "white_box/VulkanImageWrappingTests.h",
         "white_box/VulkanImageWrappingTests_DmaBuf.cpp",
-      ]
-    } else if (is_linux) {
-      sources += [
-        "white_box/VulkanImageWrappingTests.cpp",
-        "white_box/VulkanImageWrappingTests.h",
+        "white_box/VulkanImageWrappingTests_DmaBuf.h",
         "white_box/VulkanImageWrappingTests_OpaqueFD.cpp",
+        "white_box/VulkanImageWrappingTests_OpaqueFD.h",
       ]
     }
 
@@ -742,7 +739,7 @@ dawn_test("dawn_end2end_tests") {
     sources += [ "End2EndTestsMain.cpp" ]
   }
 
-  if (is_chromeos) {
+  if (is_chromeos || is_linux) {
     libs += [ "gbm" ]
   }
 }
