[shuffle] Move val/ to new structure.
This CL moves the val/ files into the `lang/msl/validate` and
`lang/hlsl/validate` folders and updates the includes. The namespaces
and some method names are updated during the move to fit with the new
location. The `val/val.h` header is split into two, one for HLSL and one
for MSL.

Bug: tint:1988
Change-Id: Ie18b5c6a0491aa1d5ff3e3bee143c5d25d8606ce

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -147,9 +147,10 @@ source_set("tint_utils_io") {
 ###############################################################################
 source_set("tint_val") {
   sources = [
-    "val/hlsl.cc",
-    "val/msl.cc",
-    "val/val.h",
+    "lang/hlsl/validate/hlsl.cc",
+    "lang/hlsl/validate/val.h",
+    "lang/msl/validate/msl.cc",
+    "lang/msl/validate/val.h",
   ]
   deps = [
     ":libtint_ast_src",
