[tint] Shuffle transforms
Move the manager to tint/lang/wgsl/ast/transform.
Remove tint/transform directory.

We do not believe the IR needs a transform manager.

Bug: tint:1988
Change-Id: I711c464dde9deb0db32479cfd4eaddd758fb9c4f

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -354,16 +354,12 @@ libtint_source_set("libtint_inspector_src") {
   ]
 }
 
-libtint_source_set("libtint_transform_src") {
-  sources = [
-    "transform/transform.cc",
-    "transform/transform.h",
-  ]
-  deps = [ ":libtint_utils_src" ]
-}
-
 libtint_source_set("libtint_ast_transform_base_src") {
   sources = [
+    "lang/wgsl/ast/transform/data.cc",
+    "lang/wgsl/ast/transform/data.h",
+    "lang/wgsl/ast/transform/manager.cc",
+    "lang/wgsl/ast/transform/manager.h",
     "lang/wgsl/ast/transform/transform.cc",
     "lang/wgsl/ast/transform/transform.h",
   ]
@@ -371,29 +367,9 @@ libtint_source_set("libtint_ast_transform_base_src") {
     ":libtint_builtins_src",
     ":libtint_program_src",
     ":libtint_sem_src",
-    ":libtint_transform_src",
     ":libtint_type_src",
     ":libtint_utils_src",
   ]
-}
-
-libtint_source_set("libtint_transform_manager_src") {
-  sources = [
-    "transform/manager.cc",
-    "transform/manager.h",
-  ]
-  deps = [
-    ":libtint_ast_transform_base_src",
-    ":libtint_program_src",
-    ":libtint_transform_src",
-  ]
-
-  if (tint_build_ir) {
-    deps += [
-      ":libtint_ir_builder_src",
-      ":libtint_ir_src",
-    ]
-  }
 }
 
 libtint_source_set("libtint_ast_transform_src") {
@@ -506,7 +482,6 @@ libtint_source_set("libtint_ast_transform_src") {
     ":libtint_program_src",
     ":libtint_sem_src",
     ":libtint_symbols_src",
-    ":libtint_transform_manager_src",
     ":libtint_type_src",
     ":libtint_utils_src",
   ]
@@ -986,13 +961,13 @@ libtint_source_set("libtint_spv_reader_src") {
 
   deps = [
     ":libtint_ast_src",
+    ":libtint_ast_transform_base_src",
     ":libtint_ast_transform_src",
     ":libtint_builtins_src",
     ":libtint_program_src",
     ":libtint_reader_src",
     ":libtint_sem_src",
     ":libtint_symbols_src",
-    ":libtint_transform_manager_src",
     ":libtint_type_src",
     ":libtint_utils_src",
     "${tint_spirv_tools_dir}/:spvtools_opt",
@@ -1030,12 +1005,12 @@ libtint_source_set("libtint_writer_src") {
 
   deps = [
     ":libtint_ast_src",
+    ":libtint_ast_transform_base_src",
     ":libtint_ast_transform_src",
     ":libtint_builtins_src",
     ":libtint_inspector_src",
     ":libtint_program_src",
     ":libtint_sem_src",
-    ":libtint_transform_manager_src",
     ":libtint_type_src",
     ":libtint_utils_src",
   ]
@@ -1073,13 +1048,13 @@ libtint_source_set("libtint_spv_writer_src") {
 
   deps = [
     ":libtint_ast_src",
+    ":libtint_ast_transform_base_src",
     ":libtint_ast_transform_src",
     ":libtint_builtins_src",
     ":libtint_constant_src",
     ":libtint_program_src",
     ":libtint_sem_src",
     ":libtint_symbols_src",
-    ":libtint_transform_manager_src",
     ":libtint_type_src",
     ":libtint_utils_src",
     ":libtint_writer_src",
@@ -1155,13 +1130,13 @@ libtint_source_set("libtint_msl_writer_src") {
 
   deps = [
     ":libtint_ast_src",
+    ":libtint_ast_transform_base_src",
     ":libtint_ast_transform_src",
     ":libtint_builtins_src",
     ":libtint_constant_src",
     ":libtint_program_src",
     ":libtint_sem_src",
     ":libtint_symbols_src",
-    ":libtint_transform_manager_src",
     ":libtint_type_src",
     ":libtint_utils_src",
     ":libtint_writer_src",
@@ -1190,13 +1165,13 @@ libtint_source_set("libtint_hlsl_writer_src") {
 
   deps = [
     ":libtint_ast_src",
+    ":libtint_ast_transform_base_src",
     ":libtint_ast_transform_src",
     ":libtint_builtins_src",
     ":libtint_constant_src",
     ":libtint_program_src",
     ":libtint_sem_src",
     ":libtint_symbols_src",
-    ":libtint_transform_manager_src",
     ":libtint_type_src",
     ":libtint_utils_src",
     ":libtint_writer_src",
@@ -1213,13 +1188,13 @@ libtint_source_set("libtint_glsl_writer_src") {
 
   deps = [
     ":libtint_ast_src",
+    ":libtint_ast_transform_base_src",
     ":libtint_ast_transform_src",
     ":libtint_builtins_src",
     ":libtint_constant_src",
     ":libtint_program_src",
     ":libtint_sem_src",
     ":libtint_symbols_src",
-    ":libtint_transform_manager_src",
     ":libtint_type_src",
     ":libtint_utils_src",
     ":libtint_writer_src",
@@ -1374,7 +1349,6 @@ if (tint_build_ir) {
       ":libtint_builtins_src",
       ":libtint_constant_src",
       ":libtint_symbols_src",
-      ":libtint_transform_src",
       ":libtint_type_src",
       ":libtint_utils_src",
     ]
@@ -1650,6 +1624,7 @@ if (tint_build_unittests) {
     ]
     deps = [
       ":libtint_ast_src",
+      ":libtint_ast_transform_base_src",
       ":libtint_ast_transform_src",
       ":libtint_builtins_src",
       ":libtint_unittests_ast_helper",
@@ -1769,7 +1744,7 @@ if (tint_build_unittests) {
       "resolver/variable_validation_test.cc",
     ]
     deps = [
-      ":libtint_ast_transform_src",
+      # ":libtint_ast_transform_src",
       ":libtint_builtins_src",
       ":libtint_utils_src",
       ":tint_unittests_ast_src",
@@ -1845,6 +1820,7 @@ if (tint_build_unittests) {
       "lang/wgsl/ast/transform/fold_trivial_lets_test.cc",
       "lang/wgsl/ast/transform/for_loop_to_loop_test.cc",
       "lang/wgsl/ast/transform/localize_struct_array_assignment_test.cc",
+      "lang/wgsl/ast/transform/manager_test.cc",
       "lang/wgsl/ast/transform/merge_return_test.cc",
       "lang/wgsl/ast/transform/module_scope_var_to_entry_point_param_test.cc",
       "lang/wgsl/ast/transform/multiplanar_external_texture_test.cc",
@@ -1886,7 +1862,6 @@ if (tint_build_unittests) {
       ":libtint_ast_transform_base_src",
       ":libtint_ast_transform_src",
       ":libtint_builtins_src",
-      ":libtint_transform_manager_src",
       ":libtint_unittests_ast_helper",
       ":libtint_utils_src",
       ":libtint_wgsl_reader_src",
@@ -1906,7 +1881,6 @@ if (tint_build_unittests) {
       deps = [
         ":libtint_ir_src",
         ":libtint_ir_transform_src",
-        ":libtint_transform_manager_src",
       ]
 
       if (tint_build_spv_writer) {
@@ -2315,9 +2289,9 @@ if (tint_build_unittests) {
     ]
 
     deps = [
+      ":libtint_ast_transform_base_src",
       ":libtint_ast_transform_src",
       ":libtint_hlsl_writer_src",
-      ":libtint_transform_manager_src",
       ":libtint_utils_src",
       ":tint_unittests_ast_src",
     ]
@@ -2360,11 +2334,11 @@ if (tint_build_unittests) {
     ]
 
     deps = [
+      ":libtint_ast_transform_base_src",
       ":libtint_ast_transform_src",
       ":libtint_builtins_src",
       ":libtint_glsl_writer_src",
       ":libtint_symbols_src",
-      ":libtint_transform_manager_src",
       ":libtint_utils_src",
       ":tint_unittests_ast_src",
     ]
@@ -2385,13 +2359,10 @@ if (tint_build_unittests) {
       "clone_context_test.cc",
       "lang/wgsl/program/program_builder_test.cc",
       "lang/wgsl/program/program_test.cc",
-      "transform/manager_test.cc",
     ]
 
     deps = [
-      ":libtint_ast_transform_base_src",
       ":libtint_program_src",
-      ":libtint_transform_manager_src",
       ":libtint_unittests_ast_helper",
       ":tint_unittests_ast_src",
     ]
